--- a/style.css
+++ b/style.css
@@ -209,3 +209,15 @@ main {
   font-size: 12px;
   color: #333;
 }
+
+@media (max-width: 1024px) {
+  body {
+    background-color: orange;
+  }
+}
+
+@media (max-width: 767px) {
+  body {
+    background-color: blue;
+  }
+}
