--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ img {
   text-align: center;
   font-size: 70px;
   text-transform: uppercase;
+  line-height: 60px;
 }
 
 /* Menu */
@@ -214,10 +215,44 @@ main {
   body {
     background-color: orange;
   }
+
+  .logo {
+    font-size: 66px;
+  }
+
+  .main-heading {
+    max-width: 600px;
+    line-height: 50px;
+  }
+
+  .nav-card {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .nav-card img {
+    width: 100%;
+    height: 300px;
+  }
+
+  .footer-content {
+    width: 100%;
+    max-width: 700px;
+  }
 }
 
 @media (max-width: 767px) {
   body {
-    background-color: blue;
+    background-color: transparent;
+  }
+
+  .logo {
+    font-size: 46px;
+  }
+
+  .image-navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
