added a margin bottom to h2 in article section, took off
git staus
clear
git status
lear
clear

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   font-size: 16px;
   color: #333;
   line-height: 25px;
+  overflow-x: hidden;
 }
 
 h1,
@@ -18,6 +19,7 @@ h2,
 h3 {
   font-family: "Times New Roman", Times, serif;
   color: black;
+  margin-bottom: 0.4em;
 }
 
 ul {
@@ -46,7 +48,7 @@ img {
 }
 
 .header-wrapper {
-  margin: 0 10%;
+  /* margin: 0 10%; */
 }
 
 /* Logo */
@@ -88,7 +90,7 @@ img {
 
 .nav-card {
   margin-top: 50px;
-  width: 400px;
+  width: 100%;
   height: 400px;
   text-align: center;
   text-transform: uppercase;
@@ -127,6 +129,8 @@ main {
 
 .articles-wrapper {
   display: flex;
+  justify-content: space-around;
+  text-align: center;
 }
 
 .article {
